--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
 
 py/test.py
 test_data/learningGroup.jpg
+py/Module/__pycache__/path_util.cpython-37.pyc
+Python_comm_toQR.jpg
+pikatyu_toQR.gif
+pikatyu_toQR.gif
