--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ py/Module/__pycache__/path_util.cpython-37.pyc
 Python_comm_toQR.jpg
 pikatyu_toQR.gif
 pikatyu_toQR.gif
+py/Module/__pycache__/rs_data.cpython-37.pyc
